Fossil noticed by pmichaud++ Quote macros should be "quote:" rather than "circumfix:"--the latter implies EXPR in the middle.
git-svn-id: http://svn.pugscode.org/pugs@23925 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2271,7 +2271,7 @@ If you want to abbreviate further, just define a macro:
 
     macro qx { 'qq:x ' }          # equivalent to P5's qx//
     macro qTO { 'qq:x:w:to ' }    # qq:x:w:to//
-    macro circumfix:<❰ ❱> ($expr) { q:code{ $expr.quoteharder } }
+    macro quote:<❰ ❱> ($text) { q:code{ $text.quoteharder } }
 
 All the uppercase adverbs are reserved for user-defined quotes.
 All Unicode delimiters above Latin-1 are reserved for user-defined quotes.
