Infelicities noticed by Limbic_Region++
git-svn-id: http://svn.pugscode.org/pugs@23927 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 5 Dec 2007
+  Last Modified: 1 Jan 2008
   Number: 2
-  Version: 121
+  Version: 122
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -198,7 +198,7 @@ less visual need for a C<#> on every line.
 =item *
 
 For all quoting constructs that use user-selected brackets, you can open
-with multiple identical bracket characters, which must by closed by the
+with multiple identical bracket characters, which must be closed by the
 same number of closing brackets.  Counting of nested brackets applies only
 to pairs of brackets of the same length as the opening brackets:
 
@@ -790,7 +790,8 @@ in the absence of explicit initialization, native floating-point types
 default to NaN, while integer types (including C<bit>) default to 0.
 The complex type defaults to NaN + NaN.i.  A buf type of known size
 defaults to a sequence of 0 values.  If any native type is explicitly
-initialized to C<*> (the C<Whatever> type), it is left uninitialized.
+initialized to C<*> (the C<Whatever> type), no initialization is attempted
+and you'll get whatever was already there when the memory was allocated.
 
 If a buf type is initialized with a Unicode string value, the string
 is decomposed into Unicode codepoints, and each codepoint shoved into
