paste-os noticed by David Green++
git-svn-id: http://svn.pugscode.org/pugs@23934 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -2162,8 +2162,8 @@ the same thing:
     ===========         ============    ===========
     2 => <101010>       :2<101010>      radix literal 0b101010
     8 => <123>          :8<123>         radix literal 0o123
-    16 => <123>         :16<deadbeef>   radix literal 0xdeadbeef
-    16 => <123>         :16($somevalue) radix conversion function
+    16 => <deadbeef>    :16<deadbeef>   radix literal 0xdeadbeef
+    16 => $somevalue    :16($somevalue) radix conversion function
     '' => $x            :($x)           arglist or signature literal
     '' => ($x,$y)       :($x,$y)        arglist or signature literal
     '' => <x>           :<x>            identifier extension
