--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -720,7 +720,7 @@ For graphemes that have no precomposed form, a temporary private
 id should be assigned that uniquely identifies the grapheme.
 If such identifiers are assigned consistently thoughout the process,
 comparison of two graphemes is no more difficult than the comparison
-of two integers, and comparison of base characters no more different
+of two integers, and comparison of base characters no more difficult
 than a direct lookup into the id-to-NFD table.
 
 Obviously, any temporary grapheme ids must be translated back to
